[gd_scene load_steps=9 format=3 uid="uid://dddrt4paeru7q"]

[ext_resource type="Script" uid="uid://5mo11dxl2e4d" path="res://ui/hp_bar/hp_bar.gd" id="1_xfh1i"]
[ext_resource type="Texture2D" uid="uid://bjkmlg1kv5lmf" path="res://resources/temp_hp.png" id="2_lsnvh"]
[ext_resource type="Texture2D" uid="uid://cw1lcxrxta4i" path="res://resources/temp_hp_overlay.png" id="2_uvt3w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwdkh"]
bg_color = Color(1, 0.34051147, 0.30032542, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rfgq4"]
texture = ExtResource("2_uvt3w")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(1, 0.82627416, 0.6998268, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uvt3w"]
texture = ExtResource("2_lsnvh")

[sub_resource type="LabelSettings" id="LabelSettings_kxbic"]
outline_size = 4
outline_color = Color(0.080783345, 0.080783345, 0.080783345, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rwdkh"]
font_size = 12
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="HpBar" type="Panel" unique_id=1068573325]
custom_minimum_size = Vector2(100, 4)
offset_right = 100.0
offset_bottom = 24.0
script = ExtResource("1_xfh1i")

[node name="HpLine" type="Panel" parent="." unique_id=1421428863]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 62.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rwdkh")

[node name="TempHpLine" type="Panel" parent="." unique_id=1235167842]
unique_name_in_owner = true
texture_repeat = 2
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 44.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rfgq4")

[node name="TempHpShield" type="Control" parent="." unique_id=1143220195]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8

[node name="Panel" type="Panel" parent="TempHpShield" unique_id=1829950796]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -17.0
offset_right = 24.0
offset_bottom = 17.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_uvt3w")

[node name="TempHpLabel" type="Label" parent="TempHpShield/Panel" unique_id=1687346360]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "20"
label_settings = SubResource("LabelSettings_kxbic")
horizontal_alignment = 1
vertical_alignment = 3

[node name="HpLabel" type="Label" parent="." unique_id=2088991772]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "1/1"
label_settings = SubResource("LabelSettings_rwdkh")
horizontal_alignment = 1
vertical_alignment = 3
